# src/main/java/com/bnm/personservice/mapper/api/IndividualApiMapper.java
@@ -31,6 +31,9 @@ public interface IndividualApiMapper {
     @BeanMapping(ignoreByDefault = true)
     @Mapping(source = "domain.id", target = "id")
     @Mapping(source = "domain.userId", target = "userId")
+    @Mapping(source = "domain.passportNumber", target = "passportNumber")
+    @Mapping(source = "domain.phoneNumber", target = "phoneNumber")
+    @Mapping(source = "domain.email", target = "email")
     @Mapping(source = "revisionNumber", target = "revisionNumber", qualifiedByName = "numberToInteger")
     @Mapping(source = "revisionType", target = "revisionType", qualifiedByName = "mapRevisionType")
     @Mapping(source = "revisionInstant", target = "revisionInstant", qualifiedByName = "instantToOffsetDateTime")
